--- a/package.json
+++ b/package.json
@@ -5,12 +5,20 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "next": "^12.1.6",
     "openai": "^3.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
+  },
+  "devDependencies": {
+    "@types/node": "^18.6.3",
+    "@types/react": "^18.0.15",
+    "eslint": "^8.21.0",
+    "eslint-config-next": "^12.2.3",
+    "typescript": "^4.7.4"
   }
 }
