--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "dotenv": "^16.0.3",
     "next": "^12.1.6",
     "openai": "^3.1.0",
     "react": "17.0.2",
