--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "lottie-react": "^2.3.1",
     "next": "^12.1.6",
     "openai": "^3.0.0",
     "react": "17.0.2",
