--- a/package.json
+++ b/package.json
@@ -8,12 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "^11.0.0",
-    "openai": "^2.0.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
-  }
-   },
+    "next": "^13.1.1",
+    "openai": "^3.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
   "engines": {
     "node": ">=14.6.0"
   }
