--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
 # Do not share your OpenAI API key with anyone! It should remain a secret.
-OPENAI_API_KEY=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
+OPENAI_API_KEY=
