--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "^13.1.1",
     "openai": "^3.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "typewriter-effect": "^2.19.0"
   },
   "engines": {
     "node": ">=14.6.0"
