--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
   },
   "dependencies": {
     "@socialgouv/matomo-next": "^1.6.1",
+    "i18next": "^22.4.11",
     "next": "^13.1.1",
+    "next-i18next": "^13.2.2",
     "openai": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^12.2.0",
     "typewriter-effect": "^2.19.0"
   },
   "engines": {
