--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@socialgouv/matomo-next": "^1.6.1",
     "i18next": "^22.4.12",
+    "isomorphic-unfetch": "^4.0.2",
     "next": "^13.1.1",
     "next-i18next": "^13.2.2",
     "openai": "^3.2.1",
