--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "^13.1.1",
+    "@nextui-org/react": "^1.0.0-beta.12",
+    "fs": false,
+    "next": "^13.2.4",
     "openai": "^3.1.0",
+    "os": false,
+    "path": false,
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
