--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest"
   },
   "dependencies": {
+    "@plasmicapp/loader-nextjs": "^1.0.249",
+    "@plasmicapp/react-web": "^0.2.180",
     "next": "^13.1.1",
     "openai": "^3.1.0",
     "react": "^18.2.0",
@@ -15,5 +18,8 @@
   },
   "engines": {
     "node": ">=14.6.0"
+  },
+  "devDependencies": {
+    "jest": "^29.5.0"
   }
 }
