--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "next": "^13.1.1",
     "openai": "^3.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-speech-kit": "^3.0.1"
   },
   "engines": {
     "node": ">=14.6.0"
