--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
 # Do not share your OpenAI API key with anyone! It should remain a secret.
-OPENAI_API_KEY=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
+OPENAI_API_KEY=
