--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "build": "next build",
     "start": "next start"
   },
-
   "dependencies": {
     "next": "^13.1.1",
     "openai": "^3.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-combo-select": "^1.3.22",
+    "react-dom": "^18.2.0",
+    "react-select": "^5.7.3"
   },
   "engines": {
     "node": ">=14.6.0"
