--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   },
   "engines": {
     "node": ">=14.6.0"
+  },
+  "devDependencies": {
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "tailwindcss": "^3.3.1"    
   }
 }
