--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
 # Do not share your OpenAI API key with anyone! It should remain a secret.
-OPENAI_API_KEY=
+OPENAI_API_KEY=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
