--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
   },
   "dependencies": {
     "next": "^13.1.1",
-    "openai": "^3.1.0",
+    "openai": "^4.26.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "engines": {
-    "node": ">=16"
+    "node": ">=16",
+    "npm": ">=7"
   }
 }
